--- a/src/assets/styles/Header.module.scss
+++ b/src/assets/styles/Header.module.scss
@@ -1,6 +1,10 @@
 header {
     height: 8vh;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid lightgrey;
+
+    div.profilePicContainer {
+        aspect-ratio: 1;
+    }
 
     p {
         margin: .2rem;
