--- a/src/assets/styles/SearchUsers.module.scss
+++ b/src/assets/styles/SearchUsers.module.scss
@@ -1,10 +1,10 @@
 input {
     border: 1px solid lightgrey;
+    padding: .3rem 1rem;
 }
 
 ul {
     top: 120%;
-    border: 1px solid lightgrey;
     padding: 0;
     cursor: default;
 
@@ -26,10 +26,13 @@ ul {
 
     &.foundUsers {
         cursor: pointer;
-        padding: 0;
 
         li {
             transition: all .3s ease;
+
+            div.profilePicContainer {
+                aspect-ratio: 1;
+            }
 
             &:hover {
                 background-color: rgb(234, 234, 234);
