--- a/src/assets/styles/SearchUsers.module.scss
+++ b/src/assets/styles/SearchUsers.module.scss
@@ -1,6 +1,10 @@
 input {
     border: 1px solid lightgrey;
     padding: .3rem 1rem;
+
+    &:focus {
+        outline: 1px solid lightgrey;
+    }
 }
 
 ul {
@@ -9,14 +13,10 @@ ul {
     cursor: default;
 
     li {
-        img {
-            width: 70px;
-            height: 70px;
-        }
-    
         p {
             margin: .2rem;
             font-weight: 600;
+            white-space: nowrap;
     
             &.name {
                 color: grey;
@@ -30,8 +30,9 @@ ul {
         li {
             transition: all .3s ease;
 
-            div.profilePicContainer {
-                aspect-ratio: 1;
+            img {
+                width: 60px;
+                height: 60px;
             }
 
             &:hover {
