--- a/src/assets/styles/SearchUsers.module.scss
+++ b/src/assets/styles/SearchUsers.module.scss
@@ -1,6 +1,12 @@
+i {
+    top: 30%;
+    color: grey;
+    left: 2%;
+}
+
 input {
     border: 1px solid lightgrey;
-    padding: .3rem 1rem;
+    padding: .3rem 2.5rem;
 
     &:focus {
         outline: 1px solid lightgrey;
