--- a/src/assets/styles/SearchUsers.module.scss
+++ b/src/assets/styles/SearchUsers.module.scss
@@ -1,10 +1,10 @@
-i {
+i.searchIcon {
     top: 30%;
     color: grey;
     left: 2%;
 }
 
-input {
+input.searchUsers {
     border: 1px solid lightgrey;
     padding: .3rem 2.5rem;
 
