--- a/src/assets/styles/Post.module.scss
+++ b/src/assets/styles/Post.module.scss
@@ -1,29 +1,31 @@
-img.profilePic {
-    width: 70px;
-    height: 70px;
-}
-
-img.postImage {
-    width: 800px;
-    max-width: 100%;
-}
-
-i.postIcon {
-    font-size: 3rem;
-    margin-right: 2rem;
-    color: black;
-    transition: all .1s ease;
-    cursor: pointer;
-
-    &:hover {
-        color: grey;
+div.post {
+    img.profilePic {
+        width: 70px;
+        height: 70px;
     }
-}
-
-p.location {
-    cursor: default;
-}
-
-p.description {
-    overflow-wrap: break-word;
+    
+    img.postImage {
+        width: 900px;
+        max-width: 100%;
+    }
+    
+    i.postIcon {
+        font-size: 2rem;
+        margin-right: 2rem;
+        color: black;
+        cursor: pointer;
+    
+        &:hover {
+            color: grey;
+        }
+    }
+    
+    p.location {
+        cursor: default;
+        font-size: .8rem;
+    }
+    
+    p.description {
+        overflow-wrap: break-word;
+    }
 }
