--- a/src/style.scss
+++ b/src/style.scss
@@ -10,6 +10,11 @@ div.userProfile {
     padding-top: 7rem;
 }
 
+ul {
+    list-style: none;
+    padding: 0;
+}
+
 @media (min-width: 768px) {
     div.container-fluid {
         width: 75%;
