--- a/src/assets/styles/Forms.module.scss
+++ b/src/assets/styles/Forms.module.scss
@@ -1,7 +1,8 @@
 div.authentication,
 div.registration,
 div.completeRegistration,
-div.authUserSettings {
+div.authUserSettings,
+div.addPost {
 
     img {
         max-width: 500px;
@@ -9,6 +10,7 @@ div.authUserSettings {
 
     input {
         padding: .5rem 1rem;
+        height: 45px;
         background-color: #fafafa;
         border: 1px solid #dbdbdb;
         margin-bottom: .5rem;
@@ -54,13 +56,15 @@ div.authUserSettings {
 
 div.registration,
 div.completeRegistration,
-div.authUserSettings {
+div.authUserSettings,
+div.addPost {
     input {
         padding: .5rem 1rem .5rem 11rem;
     }
 }
 
-div.authUserSettings {
+div.authUserSettings,
+div.addPost {
     textarea {
         height: 150px;
         resize: none;
