Changed all form input span.placeholder elements in label elements.

--- a/src/assets/styles/Forms.module.scss
+++ b/src/assets/styles/Forms.module.scss
@@ -46,7 +46,7 @@ div.addPost {
         }
     }
 
-    span.placeholder {
+    label {
         position: absolute;
         color: grey;
         top: 15%;
