Loading image position fixed.

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,7 +5,8 @@ div.authUserSettings,
 div.completeRegistration,
 div.registration,
 div.showPost,
-div.userProfile {
+div.userProfile,
+div.loading {
     padding: 1rem;
     padding-top: 7rem;
 }
