Added icons to ShowPost component.

--- a/src/assets/styles/ShowPost.module.scss
+++ b/src/assets/styles/ShowPost.module.scss
@@ -9,6 +9,17 @@ div.showPost {
         max-width: 100%;
     }
 
+    i.postIcon {
+        font-size: 2rem;
+        margin-right: 2rem;
+        color: black;
+        cursor: pointer;
+    
+        &:hover {
+            color: grey;
+        }
+    }
+
     p.description,
     span.location {
         overflow-wrap: break-word;
