--- a/src/assets/styles/Post.module.scss
+++ b/src/assets/styles/Post.module.scss
@@ -7,6 +7,7 @@ div.post {
     img.postImage {
         width: 900px;
         max-width: 100%;
+        max-height: 800px;
     }
     
     i.postIcon {
