NotFound component styling completed.

--- a/src/style.scss
+++ b/src/style.scss
@@ -6,7 +6,8 @@ div.completeRegistration,
 div.registration,
 div.showPost,
 div.userProfile,
-div.loading {
+div.loading,
+div.notFound {
     padding: 1rem;
     padding-top: 7rem;
 }
